migration: up to InvolvedPartySystem